Tue May 14 15:40:34 2002  George Lebl <jirka@5z.com>

	* gui/Makefile.am: remove all the gdmconfig stuff and add
	  gdmchooser.gladep and gdmsetup.gladep

Tue May 14 14:54:20 2002  George Lebl <jirka@5z.com>

	* Release 2.3.90.3

Tue May 14 14:53:51 2002  George Lebl <jirka@5z.com>

	* NEWS, configure.in: increment version, prepare for release

	* gui/gdmsetup.c: fix initial selection of the current greeter

	* daemon/display.c, daemon/errorgui.c, daemon/gdm.[ch],
	  daemon/misc.c, daemon/server.c, daemon/slave.c:  Fix deadlocks
	  when using the syslog inside a signal handler by sending the
	  message to the main daemon which then syslogs it.

Tue May 14 12:08:25 2002  George Lebl <jirka@5z.com>

	* gui/gdmphotosetup.c, daemon/auth.c:  Apply some leak fixes from
	  ali.akcaagac@stud.fh-wilhelmshaven.de (Ali Akcaagac) #80888.  That
	  is only those that really made sense

	* gui/gdmphotosetup.c: Port to GtkDialog, should fix #80835

	* config/gdm.conf.in, daemon/gdm.c, daemon/slave.c: fix #80829
	  and add a whole bunch of checks for server paths so that we
	  find servers other then /usr/bin/X11/X, also look for proggies
	  in /opt/X11R6/bin

	* configure.in: check for socklen_t and define it to be size_t
	  if not found, fixes #79373

	* daemon/gdm.[ch], daemon/slave.c, daemon/display.c, daemon/xdmcp.c,
	  daemon/misc.[ch], daemon/server.c: Fix slave notifications.  We
	  can't use a mainloop here since slaves are all synchroneous.  So
	  we use a variety of signals and hacks to get this to work.

Tue May 14 02:26:01 2002  George Lebl <jirka@5z.com>

	* daemon/slave.c, daemon/gdm.c: a bit of debug info for the slave
	  notifications which are utterly broken damnit.  Will need
	  a signal or some such.

	* gui/greeter/greeter.c, gui/greeter/greeter_item_pam.c:  do all
	  the right utf8/locale conversions just like gdmlogin

Tue May 14 01:25:03 2002  George Lebl <jirka@5z.com>

	* daemon/display.c, daemon/errorgui.c, daemon/misc.[ch],