@@ -1,3 +1,9 @@
+Tue May 14 17:13:33 2002  George Lebl <jirka@5z.com>
+
+	* gui/gdmphotosetup.c: fixed crash, damnit I'm such an idiot, oh well
+	  fortunately the crash would happen only after things finished so
+	  most users would only notice a new corefile being created on exit :)
+
 Tue May 14 15:40:34 2002  George Lebl <jirka@5z.com>
 
 	* gui/Makefile.am: remove all the gdmconfig stuff and add
